[metadata]
author = IAS
author_email = network@ias.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Certbot Deployer plugin for deploying certificates to F5 BIG-IP devices

long_description = file: README.md
long_description_content_type = text/markdown
name = certbot_deployer_bigip
project_urls =
	Documentation = https://theias.github.io/certbot_deployer_bigip/
	Bug Tracker = https://github.com/theias/certbot_deployer_bigip/issues
	Source = https://github.com/theias/certbot_deployer_bigip
url = https://github.com/theias/certbot_deployer_bigip
version = attr: certbot_deployer_bigip.meta.__version__

[options]
install_requires =
	certbot_deployer>=0.1.1,<=1.0.0
	cryptography>=44.0.1,<45.0.0
	fabric>=3.2.2,<4.0.0
	scp==0.15.0
packages = find:
package_dir =
	=./
python_requires = >=3.9

[options.packages.find]
where = ./
exclude = tests*

[options.entry_points]
console_scripts =
    certbot-deployer-bigip = certbot_deployer_bigip:main
    certbot_deployer_bigip = certbot_deployer_bigip:main
certbot_deployer.plugins =
    certbot-deployer-bigip = certbot_deployer_bigip.certbot_deployer_bigip:BigipDeployer
